# PES6-RPC

./: README.md  discordrcp.cpp  discordrcp.h  discordrcp.rc
ConsoleApplication1/: CMakeLists.txt  main.cpp
